--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ INSTRUCCIONES RÁPIDAS PARA EDITAR ESTA PÁGINA (LAATS)
         <a class="link" href="https://forms.gle/cucQrsgYS76fKNcQ9" target="_blank">Nuevo ingreso</a>
         <a class="link" href="https://forms.gle/dJQk4zjsDAMfENWm8" target="_blank">Sobretiempos</a>
         <a class="link" href="https://forms.gle/QdrJRPtvZiD8UA7Z9" target="_blank">Justificaciones</a>
+         <a class="link" href="https://forms.gle/yF9Ad2T3BG7bNetP7" target="_blank">Consultas de Planilla</a>
       </div>
     </div>
   </div>
@@ -131,7 +132,7 @@ INSTRUCCIONES RÁPIDAS PARA EDITAR ESTA PÁGINA (LAATS)
   <!-- 📌 PIE DE PÁGINA -->
   <footer>
     © <span id="year"></span> LAATS - Safety and Quality Services | 
-    <a href="mailto:info@laats.com">info@laats.com</a>
+    <a href="mailto:asistentepanama@laats.net">asistentepanama@laats.net</a>
   </footer>
 
   <script>
