--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ INSTRUCCIONES RÁPIDAS PARA EDITAR ESTA PÁGINA (LAATS)
         <a class="link" href="https://forms.gle/dJQk4zjsDAMfENWm8" target="_blank">Sobretiempos</a>
         <a class="link" href="https://forms.gle/QdrJRPtvZiD8UA7Z9" target="_blank">Justificaciones</a>
          <a class="link" href="https://forms.gle/yF9Ad2T3BG7bNetP7" target="_blank">Consultas de Planilla</a>
+         <a class="link" href="https://forms.gle/1ymVHFT22bcpUdhw6" target="_blank">Gastos Reembolsables</a>
       </div>
     </div>
   </div>
