--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ INSTRUCCIONES RÁPIDAS PARA EDITAR ESTA PÁGINA (LAATS)
          <a class="link" href="https://forms.gle/yF9Ad2T3BG7bNetP7" target="_blank">Consultas de Planilla</a>
          <a class="link" href="https://forms.microsoft.com/Pages/ResponsePage.aspx?id=-cDNTwYQtUGDH-pl26OXtqZhy_o99yNEil3VzhbrBrVUMFo5RUpQQTEyUE9DVVRGUUlWV1E3MVFTSi4u" target="_blank">Sol. Cartas de Trabajo</a>
          <a class="link" href="https://forms.gle/1ymVHFT22bcpUdhw6" target="_blank">Gastos Reembolsables</a>
+         <a class="link" href="https://forms.gle/Kgp4jqEgvoXEQNz87" target="_blank">Vacaciones</a>
       </div>
     </div>
   </div>
